--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\BackgroundOverlay.cs" />
      <Compile Include="Assets\Scripts\BubbleBehavior.cs" />
      <Compile Include="Assets\Scripts\CameraShakeBehavior.cs" />
      <Compile Include="Assets\Scripts\InitialSetup.cs" />
