More sound effects, relinked all scritps/sprites

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,11 +48,14 @@
      <Compile Include="Assets\Scripts\BackgroundOverlay.cs" />
      <Compile Include="Assets\Scripts\BubbleBehavior.cs" />
      <Compile Include="Assets\Scripts\CameraShakeBehavior.cs" />
+     <Compile Include="Assets\Scripts\ComboBehavior.cs" />
+     <Compile Include="Assets\Scripts\ComboTextBehavior.cs" />
      <Compile Include="Assets\Scripts\ExplosionBehavior.cs" />
      <Compile Include="Assets\Scripts\InitialSetup.cs" />
      <Compile Include="Assets\Scripts\MouseBehavior.cs" />
      <Compile Include="Assets\Scripts\ScoreManager.cs" />
      <Compile Include="Assets\Scripts\SoundManager.cs" />
+     <Compile Include="Assets\Scripts\TimerController.cs" />
      <Compile Include="Assets\Scripts\WaveBehavior.cs" />
      <None Include="Assets\Animations\Animations.txt" />
      <None Include="Assets\Textures\Textures.txt" />
